--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 @import "../bower_components/normalize-scss/_normalize.scss";
 @import "../bower_components/typeplate-starter-kit/css/_typeplate.scss";
 @import "./mixins.scss";
-
+@import "../bower_components/font-awesome/css/font-awesome.min.css";
 /**
  * BOX-SIZING
  */
@@ -9,7 +9,6 @@
 *, *:before, *:after {
     box-sizing: border-box;
 }
-
 /**
  * GRIDS
  */
@@ -20,7 +19,6 @@
     font-size: 0;
     text-align: justify;
     position: relative;
-
     & > * {
         font-size: medium;
         text-align: left;
@@ -28,7 +26,6 @@
         width: 100%;
         vertical-align: top;
     }
-
     &:after {
         display: inline-block;
         width: 100%;
@@ -36,10 +33,8 @@
         font-size: medium;
     }
 }
-
 @include gridify(2, 400);
 @include gridify(4, 600);
-
 /**
  * PACE (automatic pre-loader thingy)
  */
@@ -49,15 +44,12 @@
     user-select: none;
     transition: all 1s ease;
 }
-
 .pace-inactive {
     opacity: 0;
 }
-
 .pace-active {
     opacity: 1;
 }
-
 .pace .pace-progress {
     background: #2299dd;
     position: fixed;
@@ -68,3 +60,194 @@
     height: 2px;
     transition: all 1s ease;
 }
+/**
+ * GENERAL
+ */
+
+img {
+    max-width: 100%;
+}
+body {
+    transition: opacity .25s ease;
+}
+span {
+    display: inline-block;
+}
+// .teacher {
+//     margin: 1em auto 15px;
+//     padding: 30px;
+//     border: black;
+//     border: 10px;
+//     width: 60ch;
+//     box-shadow: 0 0 10px black;
+//     border-radius: 10px;
+// }
+// .teacher {
+//     margin: 45px auto 45px;
+//     padding: 50px;
+//     border: black;
+//     border: 10px;
+//     width: 60ch;
+//     box-shadow: 0 0 10px black;
+//     border-radius: 10px;
+// }
+.teacher {
+    margin: 45px auto 45px;
+    padding: 50px;
+    border: black;
+    border: 10px;
+    width: 60ch;
+    box-shadow: 0 0 10px black;
+    border-radius: 10px;
+}
+button {
+    border-radius: 10px;
+}
+input {
+    width: 30ch;
+}
+// html {
+//     background: url(https://unsplash.imgix.net/1/irish-hands.jpg?q=75&fm=jpg&s=0b8bb73125fe1ec4828d0048550ae2bd) no-repeat center center fixed;
+//     -webkit-background-size: cover;
+//     -moz-background-size: cover;
+//     -o-background-size: cover;
+//     background-size: cover;
+// }
+.green {
+    color: #020824;
+    border: 2px #020824 solid;
+}
+.green:hover {
+    color: #fff;
+
+}
+.btn {
+    cursor: pointer;
+    margin: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 22px;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -o-transition: .3s;
+    display: inline-block;
+}
+.button {
+    text-align: center;
+    display: inline-block;
+    margin-top: 15%;
+}
+.gamesbutton {
+    text-align: center;
+    display: inline-block;
+    margin-top: 15%;
+    margin-left: 50%;
+}
+#teacherloginbutton{
+    margin-top: 0;
+}
+#teacherregisterbutton {
+     margin-top: 0;
+}
+.menu {
+    display: block;
+    height: 76px;
+    background: #fff;
+    opacity: 0.6;
+    padding: 7px 0 0 7px;
+    border: 0px solid #eee;
+    line-height: 18px;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+    cursor: default;
+    list-style: none;
+    margin-top: -272px; //-315px
+    color: #FFF;
+    text-align: right;
+}
+
+h4 {
+    color: #000;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: 300;
+    font-size: 24px;
+}
+h3 {
+    color: #000;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: 300;
+    font-size: 24px;
+    text-align: center;
+}
+.col-1-3 {
+    width: 33.33%;
+    // outline: solid #000 1px;
+}
+header {
+    background-image: url(http://www.npr.org/assets/img/2014/05/19/brazil-soccer-dreams1_wide-6111047416e4954da0b17ae5e4066ecfc606e65d.jpg);
+    min-height: 800px;
+    background-size: cover;
+}
+// .menu .logo {
+//     height: 100px;
+//     width: 100px;
+
+//     background-color: white;
+//     border-radius: 25%;
+//     display: block;
+//     background-size: cover;
+//     float: left;
+//     position: absolute;
+//     left: 0;
+//     top: 0;
+// }
+
+.grid .grid-pad > [class*='col-']:last-of-type {
+    padding-right: 20px;
+}
+.grid-pad {
+    padding: 20px 0 20px 20px;
+}
+
+.specialexamplemenu {
+    display: block;
+    height: 76px;
+    background: #000;
+    opacity: 0.6;
+    padding: 7px 0 0 7px;
+    border: 0px solid #eee;
+    line-height: 18px;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+    cursor: default;
+    list-style: none;
+    color: #FFF;
+    text-align: right;
+}
+.dashboardmenu {
+    display: block;
+    height: 76px;
+    background: #fff;
+    opacity: 0.6;
+    padding: 7px 0 0 7px;
+    border: 0px solid #eee;
+    line-height: 18px;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+    cursor: default;
+    list-style: none;
+    color: #FFF;
+    text-align: right;
+}
+ul {
+    padding: 0;
+}
+ form {
+     display: inline-block;
+     margin-left: 25px;
+ }
