--- a/templates/home.html
+++ b/templates/home.html
@@ -1,126 +1,32 @@
-<!DOCTYPE html>
-<html lang="en" class="no-js">
-    <head>
-        <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-        <link rel="stylesheet" type="text/css" href="css/demo.css" />
-        <link rel="stylesheet" type="text/css" href="css/component.css" />
-        <link rel="stylesheet" type="text/css" href="css/content.css" />
-        <script src="js/modernizr.custom.js"></script>
-    </head>
-    <body>
-        <div class="container">
+<header>
 
-            <header class="codrops-header">
-                <h1>Piqup</h1>
-                <nav class="codrops-demos">
-                    <a class="current-demo" href="index.html">Login/Signup</a>
-                </nav>
-            </header>
-            <section>
-                <div class="mockup-content">
+    <div class="button">
+        <a class="btn green" href="#signup">Sign Up </a>
+</div>
 
-                    <div class="morph-button morph-button-modal morph-button-modal-2 morph-button-fixed">
-                        <button type="button">Login</button>
-                        <div class="morph-content">
-                            <div>
-                                <div class="content-style-form content-style-form-1">
-                                    <span class="icon icon-close">Close the dialog</span>
-                                    <h2>Login</h2>
-                                    <form>
-                                        <p><label>Email</label><input type="text" /></p>
-                                        <p><label>Password</label><input type="password" /></p>
-                                        <p><button>Login</button></p>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div><!-- morph-button -->
-                    <strong class="joiner">or</strong>
-                    <div class="morph-button morph-button-modal morph-button-modal-3 morph-button-fixed">
-                        <button type="button">Signup</button>
-                        <div class="morph-content">
-                            <div>
-                                <div class="content-style-form content-style-form-2">
-                                    <span class="icon icon-close">Close the dialog</span>
-                                    <h2>Sign Up</h2>
-                                    <form>
-                                        <p><label>Email</label><input type="text" /></p>
-                                        <p><label>Password</label><input type="password" /></p>
-                                        <p><label>Repeat Password</label><input type="password" /></p>
-                                        <p><button>Sign Up</button></p>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div><!-- morph-button -->
+    <div class="button">
+        <a class="btn green" href="#dashboard">Find a game</a>
+    </div>
 
-        </div><!-- /container -->
-        <script src="js/classie.js"></script>
-        <script src="js/uiMorphingButton_fixed.js"></script>
-        <script>
-            (function() {
-                var docElem = window.document.documentElement, didScroll, scrollPosition;
 
-                // trick to prevent scrolling when opening/closing button
-                function noScrollFn() {
-                    window.scrollTo( scrollPosition ? scrollPosition.x : 0, scrollPosition ? scrollPosition.y : 0 );
-                }
+    <div class="menu">
+        <span class="logo"></span>
+        <div class="pure-menu pure-menu-horizontal">
+            <a href="#" class="pure-menu-heading pure-menu-link">HOME</a>
+            <ul class="pure-menu-list">
+                <li class="pure-menu-item"><a href="#features" class="pure-menu-link">FEATURES</a>
+                </li>
+                <li class="pure-menu-item"><a href="#about" class="pure-menu-link">ABOUT</a>
+                </li>
+                <li class="pure-menu-item"><a href="#faq" class="pure-menu-link">FAQ</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</header>
 
-                function noScroll() {
-                    window.removeEventListener( 'scroll', scrollHandler );
-                    window.addEventListener( 'scroll', noScrollFn );
-                }
+ <div style="height:10px"></div>
 
-                function scrollFn() {
-                    window.addEventListener( 'scroll', scrollHandler );
-                }
+<div class="grid grid-pad" id="features">
 
-                function canScroll() {
-                    window.removeEventListener( 'scroll', noScrollFn );
-                    scrollFn();
-                }
-
-                function scrollHandler() {
-                    if( !didScroll ) {
-                        didScroll = true;
-                        setTimeout( function() { scrollPage(); }, 60 );
-                    }
-                };
-
-                function scrollPage() {
-                    scrollPosition = { x : window.pageXOffset || docElem.scrollLeft, y : window.pageYOffset || docElem.scrollTop };
-                    didScroll = false;
-                };
-
-                scrollFn();
-
-                [].slice.call( document.querySelectorAll( '.morph-button' ) ).forEach( function( bttn ) {
-                    new UIMorphingButton( bttn, {
-                        closeEl : '.icon-close',
-                        onBeforeOpen : function() {
-                            // don't allow to scroll
-                            noScroll();
-                        },
-                        onAfterOpen : function() {
-                            // can scroll again
-                            canScroll();
-                        },
-                        onBeforeClose : function() {
-                            // don't allow to scroll
-                            noScroll();
-                        },
-                        onAfterClose : function() {
-                            // can scroll again
-                            canScroll();
-                        }
-                    } );
-                } );
-
-                // for demo purposes only
-                [].slice.call( document.querySelectorAll( 'form button' ) ).forEach( function( bttn ) {
-                    bttn.addEventListener( 'click', function( ev ) { ev.preventDefault(); } );
-                } );
-            })();
-        </script>
-    </body>
-</html>
+</div>
