--- a/scss/style.scss
+++ b/scss/style.scss
@@ -187,7 +187,7 @@ h3 {
     // outline: solid #000 1px;
 }
 header {
-    background-image: url(http://pbnjane.com/wp-content/uploads/2015/03/Piqupapp.jpg);
+    background-image: url(../images/Piqupapp.jpg);
     min-height: 800px;
     background-size: cover;
 }
