new logo/admin panel

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,8 +17,8 @@
   <!--navigation swipe-->
   <nav class="pushy pushy-left">
     <div class="profile">
-      <div class="avatar"><img src="http://www.sbs.com.au/news/sites/sbs.com.au.news/files/styles/thumb_small/public/images/1/2/12Mar_AlanPardew_800x600.jpg?itok=Brv843ry" alt="#"><span>3</span></div>
-      <h3><a href="03.html">Alan Pardew</a></h3>
+      <div class="avatar"><img src="http://www.exberliner.com/downloads/12946/download/bitblt-120x120-fde16d613687819a4139493d2caf51b91d7a5c6c/panke_logo_p_web-sw.png?cb=ab322fc525a476a871796f602ec68571" alt="#"></div>
+      <h3><a href="03.html">Piqup</a></h3>
       <a href="#" class="log_btn">Log in</a>
     </div>
     <ul class="side_menu">
@@ -33,7 +33,7 @@
   <div class="site-overlay"></div>
   <div id="container">
     <div class="top_promo_block" id="promo_head">
-      <div class="menu-btn">&#9776;<span>3</span></div>
+      <div class="menu-btn">&#9776;</div>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -55,7 +55,7 @@
                 <span><i class="fa fa-exchange"></i>Sport<span class="caret"></span></span>
               </button>
               <ul class="dropdown-menu dropdown-menu-right place_dd" role="menu">
-                <li><a href="01.html" class="sport"><i class="fa fa-futbol-o"></i>Soccer</a></li>
+                <li><a href="#signup" class="sport"><i class="fa fa-futbol-o"></i>Soccer</a></li>
               </ul>
             </div>
             <div class="input-group-btn btn_promo_search">
@@ -76,7 +76,7 @@
         <div class="row">
           <div class="col-md-4 fea_item wow bounceInUp">
             <h3><i class="fa fa-shirtsinbulk"></i>Uniforms</h3>
-            <span>No more 'Shirts'/'Skins'! Stay organized by finding out what colors to wear any particular game in your city!.</span>
+            <span>No more 'Shirts'/'Skins'! Stay organized by finding out what colors to wear to any game in your city!</span>
           </div>
           <div class="col-md-4 fea_item wow bounceInUp">
               <h3><i class="fa fa-list-ol"></i>Rosters</h3>
@@ -84,7 +84,7 @@
           </div>
           <div class="col-md-4 fea_item wow bounceInUp">
             <h3><i class="fa fa-futbol-o"></i>Ball Up!</h3>
-            <span>Tired of showing up to the game and noone brought a ball? Well, stay organized through Piqup and message your friends to find out who is bringing it!</span>
+            <span>Tired of showing up to the game and no one has a ball? Stay organized through Piqup and message your friends to find out who is bringing it!</span>
           </div>
           <div class="col-md-4 fea_item wow bounceInUp">
             <h3><i class="fa fa-twitter"></i>Twitter Integration</h3>
@@ -92,7 +92,7 @@
           </div>
           <div class="col-md-4 fea_item wow bounceInUp">
           <h3><i class="fa fa-globe"></i>Google Maps support</h3>
-            <span>Find games in your area through Google's powerful Map API. With 'street view' you can get an idea of where the game is, and what the playing field/street looks like!</span>
+            <span>Find games in your area through Google's powerful Map API. With 'street view' you can get an idea of where the game is, and what the playing field or street looks like!</span>
             </div>
           <div class="col-md-4 fea_item wow bounceInUp">
             <h3><i class="fa fa-comments"></i>Rate Games</h3>
@@ -101,8 +101,6 @@
         </div>
       </div>
     </div>
-
-<h1>Hello, world!</h1>
 
   <div class="button">
         <a class="btn green" href="#signup">Sign Up </a>
