home cleaned up/login route sorted

--- a/templates/home.html
+++ b/templates/home.html
@@ -22,8 +22,8 @@
       <a href="#" class="log_btn">Log in</a>
     </div>
     <ul class="side_menu">
-      <li><a href="promo.html"><i class="fa fa-bookmark-o"></i>Home</a></li>
-      <li><a href="01.html" class="animsition-link"><i class="fa fa-map-marker"></i>Map</a></li>
+      <li><a href="#"><i class="fa fa-bookmark-o"></i>Home</a></li>
+      <li><a href="#signup" class="animsition-link"><i class="fa fa-map-marker"></i>Map</a></li>
       <li><a href="#"><i class="fa fa-list"></i>Games list</a></li>
       <li><a href="#"><i class="fa fa-user"></i>User profile</a></li>
     </ul>
@@ -38,8 +38,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="header_promo">
-              <img src="http://pbnjane.com/wp-content/uploads/2015/03/Piqup.png" alt="#">
-              <a href="#" class="log_btn ">Log in</a>
+
             </div>
           </div>
         </div>
