Google API linked

--- a/scss/imports/main.scss
+++ b/scss/imports/main.scss
@@ -748,11 +748,11 @@ body.inner_page .bg_parallax {
     position: relative;
 }
 .promo_block .anim_bg {
-    background:url("http://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Caracas_2010_Series.jpg/1280px-Caracas_2010_Series.jpg");
+    background:url("http://i.huffpost.com/gen/1211437/thumbs/o-SOCCER-BALL-facebook.jpg");
     position:absolute;
     left:0;
     top:0;
-    height:3000px;
+    height:2000px;
     width:100%;
     -webkit-animation:cloud_one 50s linear infinite;
     -moz-animation:cloud_one 50s linear infinite;
@@ -851,8 +851,8 @@ body.inner_page .bg_parallax {
 [3. Map Page styles / #Map Page styles]
 */
 .map {
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
     position: fixed !important;
 }
 
