--- a/templates/login.html
+++ b/templates/login.html
@@ -2,16 +2,16 @@
     <div class="menu-btn">&#9776;</div>
     <nav class="pushy pushy-left">
         <div class="profile">
-            <div class="avatar"><img src="http://www.sbs.com.au/news/sites/sbs.com.au.news/files/styles/thumb_small/public/images/1/2/12Mar_AlanPardew_800x600.jpg?itok=Brv843ry" alt="#"><span>5</span></div>
-            <h3><a href="index.html">Alan Pardew</a></h3>
+            <div class="avatar"><img src="http://www.exberliner.com/downloads/12946/download/bitblt-120x120-fde16d613687819a4139493d2caf51b91d7a5c6c/panke_logo_p_web-sw.png?cb=ab322fc525a476a871796f602ec68571" alt="#"></div>
+            <h3><a href="index.html">PIQUP</a></h3>
             <a href="#" class="log_btn">Log in</a>
         </div>
-        <ul class="side_menu">
-            <li><a href="promo.html"><i class="fa fa-bookmark-o"></i>Home</a></li>
-            <li><a href="01.html" class="animsition-link"><i class="fa fa-map-marker"></i>Map</a></li>
-            <li><a href="#"><i class="fa fa-list"></i>Games list</a></li>
-            <li><a href="#"><i class="fa fa-user"></i>User profile</a></li>
-        </ul>
+          <ul class="side_menu">
+      <li><a href="#"><i class="fa fa-bookmark-o"></i>Home</a></li>
+      <li><a href="#signup" class="animsition-link"><i class="fa fa-map-marker"></i>Map</a></li>
+      <li><a href="#games"><i class="fa fa-list"></i>Games list</a></li>
+      <li><a href="#dashboard"><i class="fa fa-user"></i>User profile</a></li>
+    </ul>
     </nav>
     <!--add-->
     <div class="add_place none" id="pl">
@@ -84,4 +84,6 @@
         </div>
     </div>
     <!--map-->
-    <div id="map" class="map"></div>
+    <div id="map" class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d443088.87942003453!2d-95.40129145!3d29.81717795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640b8b4488d8501%3A0xca0d02def365053b!2sHouston%2C+TX!5e0!3m2!1sen!2sus!4v1427211353277" width="1200" height="800" frameborder="0" style="border:0"></iframe>
+    </div>
