--- a/templates/home.html
+++ b/templates/home.html
@@ -18,14 +18,15 @@
   <nav class="pushy pushy-left">
     <div class="profile">
       <div class="avatar"><img src="http://www.exberliner.com/downloads/12946/download/bitblt-120x120-fde16d613687819a4139493d2caf51b91d7a5c6c/panke_logo_p_web-sw.png?cb=ab322fc525a476a871796f602ec68571" alt="#"></div>
-      <h3><a href="03.html">Piqup</a></h3>
+      <h3><a href="#signup">PIQUP</a></h3>
+
       <a href="#" class="log_btn">Log in</a>
     </div>
     <ul class="side_menu">
       <li><a href="#"><i class="fa fa-bookmark-o"></i>Home</a></li>
       <li><a href="#signup" class="animsition-link"><i class="fa fa-map-marker"></i>Map</a></li>
-      <li><a href="#"><i class="fa fa-list"></i>Games list</a></li>
-      <li><a href="#"><i class="fa fa-user"></i>User profile</a></li>
+      <li><a href="#games"><i class="fa fa-list"></i>Games list</a></li>
+      <li><a href="#dashboard"><i class="fa fa-user"></i>User profile</a></li>
     </ul>
   </nav>
 
@@ -58,7 +59,8 @@
               </ul>
             </div>
             <div class="input-group-btn btn_promo_search">
-              <button type="button" class="btn btn-success">Search</button>
+               <a href="#signup"><button type="button" class="btn btn-success">Search
+              </button></a>
             </div>
           </div>
         </div>
@@ -100,6 +102,163 @@
         </div>
       </div>
     </div>
+
+
+<!--Map block-->
+<div class="map_block container-fluid">
+  <div class="map_descr"><span>View full game catalog<a href="#signup">View all games</a></span></div>
+  <div class="index_map" id="map"></div>
+</div>
+
+<!--Users blocks-->
+<div class="user_block container-fluid">
+  <div class="fixed_w">
+    <h2>Top Players weekly</h2>
+    <div class="row">
+      <div class="col-md-3 user_cover wow bounceInLeft">
+        <div class="user_item">
+          <div class="user_item_cont">
+            <img src="http://footballtube.r.worldssl.net/img/player/100x100/didier-drogba.jpg" alt="#">
+            <a href="03.html" class="names">Didier Drogba</a>
+            <div class="bottom_link">
+              <ul>
+                <li><a href="03.html"><i class="fa fa-thumbs-o-up"></i>123</a></li>
+                <li><a href="03.html"><i class="fa fa-comment-o"></i>23</a></li>
+                <li><a href="03.html"><i class="fa fa-users"></i>23</a></li>
+                <li class="last"><a href="03.html"><i class="fa fa-map-marker"></i>23</a></li>
+              </ul>
+            </div>
+          </div>
+          <a href="" class="fb_btn"><i class="fa fa-facebook-official"></i></a>
+          <img src="img/bglur4.png" class="blurbg" alt="#">
+        </div>
+      </div>
+      <div class="col-md-3 user_cover wow bounceInLeft">
+        <div class="user_item">
+          <div class="user_item_cont">
+            <img src="http://www.futwiz.com/assets/img/fifaworldcup/faces/183898.png" alt="#">
+            <a href="03.html" class="names">Angel Di Maria</a>
+            <div class="bottom_link">
+              <ul>
+                <li><a href="03.html"><i class="fa fa-thumbs-o-up"></i>123</a></li>
+                <li><a href="03.html"><i class="fa fa-comment-o"></i>23</a></li>
+                <li><a href="03.html"><i class="fa fa-users"></i>23</a></li>
+                <li class="last"><a href="03.html"><i class="fa fa-map-marker"></i>23</a></li>
+              </ul>
+            </div>
+          </div>
+          <a href="" class="fb_btn"><i class="fa fa-facebook-official"></i></a>
+          <img src="img/bglur3.png" class="blurbg" alt="#">
+        </div>
+      </div>
+      <div class="col-md-3 user_cover wow bounceInRight">
+        <div class="user_item">
+          <div class="user_item_cont">
+            <img src="http://futhead.cursecdn.com/static/img/14/players/wc/195864.png" alt="#">
+            <a href="03.html" class="names">Paul Pogba</a>
+            <div class="bottom_link">
+              <ul>
+                <li><a href="03.html"><i class="fa fa-thumbs-o-up"></i>123</a></li>
+                <li><a href="03.html"><i class="fa fa-comment-o"></i>23</a></li>
+                <li><a href="03.html"><i class="fa fa-users"></i>23</a></li>
+                <li class="last"><a href="03.html"><i class="fa fa-map-marker"></i>23</a></li>
+              </ul>
+            </div>
+          </div>
+          <a href="" class="fb_btn"><i class="fa fa-facebook-official"></i></a>
+          <img src="img/bglur1.png" class="blurbg" alt="#">
+        </div>
+      </div>
+      <div class="col-md-3 user_cover wow bounceInRight">
+        <div class="user_item">
+          <div class="user_item_cont">
+            <img src="http://www.4407.co.uk/image/player1/headshot/20801.png" alt="#">
+            <a href="03.html" class="names">Christiano Ronaldo</a>
+            <div class="bottom_link">
+              <ul>
+                <li><a href="03.html"><i class="fa fa-thumbs-o-up"></i>123</a></li>
+                <li><a href="03.html"><i class="fa fa-comment-o"></i>23</a></li>
+                <li><a href="03.html"><i class="fa fa-users"></i>23</a></li>
+                <li class="last"><a href="03.html"><i class="fa fa-map-marker"></i>23</a></li>
+              </ul>
+            </div>
+          </div>
+          <a href="" class="fb_btn"><i class="fa fa-facebook-official"></i></a>
+          <img src="img/bglur2.png" class="blurbg" alt="#">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--promo block-->
+<div class="promo_block container-fluid">
+  <div class="fixed_w promka">
+    <img src="img/Piqup-Logo.png" alt="#">
+    <span>Play Football in interesting places. Share experiences with your friends. Simplify the game.</span>
+  </div>
+  <div class="anim_bg"></div>
+</div>
+
+<!--place block-->
+<div class="places_index_block container-fluid">
+  <div class="fixed_w">
+    <h2>The best Games weekly</h2>
+    <div class="row">
+      <div class="col-md-4 place_index_item  wow bounceInLeft">
+        <div class="place_inn">
+          <img src="http://www.riverhounds.com/docs/Ngwenya_Houston.jpg" alt="#">
+          <div class="pl_descr">
+            <a href="#">Houston Sports Park</a>
+            <span>Sports center with 6 grass & turf fields for recreational soccer leagues, camps, practices & events.</span>
+            <ul class="rate">
+              <li><i class="fa fa-star"></i></li>
+              <li><i class="fa fa-star"></i></li>
+              <li><i class="fa fa-star"></i></li>
+              <li><i class="fa fa-star"></i></li>
+              <li><i class="fa fa-star"></i></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 place_index_item  wow bounceInUp">
+        <div class="place_inn">
+          <img src="http://static.wixstatic.com/media/8fefd5_92aad948ce134da9b336be187ba1e169.jpg_srz_971_693_85_22_0.50_1.20_0.00_jpg_srz" alt="#">
+          <div class="pl_descr">
+            <a href="#">Toros Center</a>
+            <span>Houston Toros is an outdoor futsal soccer turf field and indoor entertainment facility.</span>
+            <ul class="rate">
+              <li><i class="fa fa-star"></i></li>
+              <li><i class="fa fa-star"></i></li>
+              <li><i class="fa fa-star"></i></li>
+              <li><i class="fa fa-star no"></i></li>
+              <li><i class="fa fa-star no"></i></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 place_index_item  wow bounceInRight">
+        <div class="place_inn">
+          <img src="https://xnomad.files.wordpress.com/2012/10/20121024_204833.jpg" alt="#">
+          <div class="pl_descr">
+            <a href="#">Memorial Park</a>
+            <span>Memorial Park, a municipal park in Houston, Texas, is one of the largest urban parks in the United States.</span>
+            <ul class="rate">
+              <li><i class="fa fa-star"></i></li>
+              <li><i class="fa fa-star"></i></li>
+              <li><i class="fa fa-star"></i></li>
+              <li><i class="fa fa-star"></i></li>
+              <li><i class="fa fa-star no"></i></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <a href="#" class="btn btn-success va">View all places</a>
+  </div>
+</div>
+</div>
+
 
   <div class="button">
         <a class="btn green" href="#signup">Sign Up </a>
