--- a/scss/imports/main.scss
+++ b/scss/imports/main.scss
@@ -557,7 +557,7 @@ body.inner_page .bg_parallax {
     padding: 0px;
     position: relative;
 }
-.map_block .index_map {width:100%; height: 700px;}
+.map_block .index_map {width:100%; height: 700px; background: url("http://pbnjane.com/wp-content/uploads/2015/03/Zlatan_Ibrahimovic1.jpg");}
 .map_block .map_descr {
     position: absolute;
     top: 560px;
