--- a/scss/imports/main.scss
+++ b/scss/imports/main.scss
@@ -1650,7 +1650,7 @@ a.green_btn:hover {
 .vp h1{
     padding: 0px 30px 30px;
 }
-.map_user_visits {width: 100%; height: 300px;}
+.map_user_visits {width: 100%; height: 300px; background: url("../img/ava_15.jpg");}
 .marker_visit {
     background: rgba(0, 0, 0, 0.83);
     border-radius: 3px;
