--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -83,62 +83,62 @@
 <div class="user_friends">
 <h4>Friends:</h4>
 <div class="users_group">
-<a href="02.html" class="user_avatars">
+<a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
 <img src="img/avatar/ava_11.jpg" alt=""></a>
-<a href="02.html" class="user_avatars">
+<a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
 <img src="img/avatar/ava_17.jpg" alt=""></a>
-<a href="02.html" class="user_avatars">
+<a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
 <img src="img/avatar/ava_9.jpg" alt=""></a>
-<a href="02.html" class="user_avatars">
+<a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
 <img src="img/avatar/ava_8.jpg" alt=""></a>
-<a href="02.html" class="user_avatars">
+<a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
 <img src="img/avatar/ava_7.jpg" alt=""></a>
-<a href="02.html" class="user_avatars">
+<a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
 <img src="http://38.media.tumblr.com/avatar_21ab233f3a73_128.png    " alt=""></a>
-<a href="02.html" class="user_avatars">
+<a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
 <img src="img/avatar/ava_5.jpg" alt=""></a>
-<a href="02.html" class="user_avatars">
+<a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
 <img src="http://becauseiplayedsports.com/wp-content/uploads/2010/01/vonn.jpg" alt=""></a>
-<a href="02.html" class="user_avatars">
+<a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
 <img src="img/avatar/ava_3.jpg" alt=""></a>
-<a href="02.html" class="user_avatars">
+<a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
 <img src="img/avatar/ava_2.jpg" alt=""></a>
-<a href="02.html" class="user_avatars">
+<a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
 <img src="https://38.media.tumblr.com/avatar_6e126ef3241c_128.png" alt=""></a>
-<a href="02.html" class="user_avatars">
+<a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
@@ -233,7 +233,7 @@
 
 <!--review-->
 <div class="rev">
-<div class="user"><a href="02.html" class="user_avatars">
+<div class="user"><a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
@@ -247,7 +247,7 @@
 
 <!--review-->
 <div class="rev">
-<div class="user"><a href="02.html" class="user_avatars">
+<div class="user"><a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
@@ -324,7 +324,7 @@
 <img src="img/avatar/ava_8.jpg" alt=""></a></div>
 <div class="texts">
 <div class="head_rev"><a href="02.html">Chapa</a> <span>02.03.2015</span></div>
-<div class="text_rev">Nice assist today boos, good lookin out.. </div>
+<div class="text_rev">Nice assist today bro, good lookin out! </div>
 </div>
 </div>
 <!--review end-->
@@ -338,14 +338,14 @@
 <img src="img/avatar/ava_7.jpg" alt=""></a></div>
 <div class="texts">
 <div class="head_rev"><a href="02.html">Scottie</a> <span>1.09.2015</span></div>
-<div class="text_rev">Get a history lesson on possibly the world's most famous beverage -- and sample Coca-Cola products from around the globe! Kids will love it...</div>
+<div class="text_rev">Great free kick today, hope I don't have to hear you talking about it for the rest of the month though haha...</div>
 </div>
 </div>
 <!--review end-->
 
 <!--review-->
 <div class="rev">
-<div class="user"><a href="02.html" class="user_avatars">
+<div class="user"><a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
@@ -359,7 +359,7 @@
 
 <!--review-->
 <div class="rev">
-<div class="user"><a href="02.html" class="user_avatars">
+<div class="user"><a href="#" class="user_avatars">
 <div class="user_go">
 <i class="fa fa-link"></i>
 </div>
