--- a/templates/home.html
+++ b/templates/home.html
@@ -106,6 +106,8 @@
 
 <!--Map block-->
 <div class="map_block container-fluid">
+  <div class="start_descrition">
+        <h1>Find a game<span></span></h1></div>
   <div class="map_descr"><span>View full game catalog<a href="#signup">View all games</a></span></div>
   <div class="index_map" id="map"></div>
 </div>
