--- a/templates/login.html
+++ b/templates/login.html
@@ -74,7 +74,7 @@
                     <span>Categori menu</span>
                     <i class="fa fa-times" id="close_menu"></i>
                     <ul>
-                        <li><a href="javascript:toggleMarkers('Sport');" class="Soccer"><i class="fa fa-futbol-o"></i></a></li>
+                        <li><a href="javascript:toggleMarkers('Sport');" class="sport"><i class="fa fa-futbol-o"></i></a></li>
                         <li><a href="javascript:toggleMarkers('Showplace');" class="showplace"><i class="fa fa-eye"></i></a></li>
                         <li><a href="javascript:toggleMarkers('Park');" class="park"><i class="fa fa-leaf"></i></a></li>
                         <li class="mobile_menu"><a href="#"><i class="fa fa-bars"></i></a></li>
@@ -84,6 +84,10 @@
         </div>
     </div>
     <!--map-->
+    <div id="street">
+
+    </div>
     <div id="map" class="map">
 
     </div>
+
