auto complete working

--- a/templates/home.html
+++ b/templates/home.html
@@ -59,7 +59,7 @@
               </ul>
             </div>
             <div class="input-group-btn btn_promo_search">
-               <a href="#signup"><button type="button" class="btn btn-success">Search
+               <a href="#signup"><button type="button.find" class="btn btn-success">Search
               </button></a>
             </div>
           </div>
