details/games in

--- a/templates/games.html
+++ b/templates/games.html
@@ -1,5 +1,140 @@
-<h1>HELLO AGAIN
-</h1>
+<div class="bg_parallax" id="inb">
+<!--navigation swipe-->
+<div class="menu-btn">&#9776;</div>
+<nav class="pushy pushy-left">
+<div class="profile">
+         <div class="avatar"><img src="http://www.exberliner.com/downloads/12946/download/bitblt-120x120-fde16d613687819a4139493d2caf51b91d7a5c6c/panke_logo_p_web-sw.png?cb=ab322fc525a476a871796f602ec68571" alt="#"></div>
+            <h3><a href="#signup">PIQUP</a></h3>
+            <a href="#" class="log_btn">Log in</a>
+        </div>
+        <ul class="side_menu">
+            <li><a href="#"><i class="fa fa-bookmark-o"></i>Home</a></li>
+            <li><a href="#signup" class="animsition-link"><i class="fa fa-map-marker"></i>Map</a></li>
+            <li><a href="#games"><i class="fa fa-list"></i>Games list</a></li>
+            <li><a href="#dashboard"><i class="fa fa-user"></i>User profile</a></li>
+        </ul>
+    </nav>
 
+<!--add-->
+<div class="add_place none" id="pl">
+<div class="place_form">
+<i class="fa fa-times close_window" id="close"></i>
+<h3>Add new place<span></span></h3>
+<form>
+<label>Place name:<input type="text"></label>
+<label>latitude:<input type="text"></label>
+<label>longitude:<input type="text"></label>
+<label>Categori:
 
+</label>
+<a href="#" class="green_btn_header" id="add">Add</a>
+</form>
+</div>
+</div>
 
+<!--autorization-->
+<div class="add_place none" id="autorized">
+<div class="place_form login_form">
+<i class="fa fa-times close_window" id="closeau"></i>
+<h3>Autorization<span></span></h3>
+<form>
+<label>Login:<input type="text"></label>
+<label>Password:<input type="text"></label>
+<a href="#" class="btn btn-success">Log in</a>
+<a href="#" class="btn btn-primary"><i class="icon-facebook"></i>Log in with Facebook</a>
+</form>
+</div>
+</div>
+<div class="site-overlay"></div>
+<div id="container">
+<!--header-->
+<div class="container-fluid header inner_head">
+<div class="fixed_w">
+<div class="row">
+<div class="col-md-12"><a href="index.html" class="logo"><img src="http://pbnjane.com/wp-content/uploads/2015/03/Piqup.png" alt=""/></a>
+</div>
+</div>
+</div>
+</div>
+<div class="container page_info">
+<div class="col_md_12">
+<h1>GAMES</h1>
+<p class="lead">Below is a list of the most popular games in your area. Go out, play and have some fun! </p>
+</div>
+</div>
+<div class="container contant">
+<div class="row cont">
+<!-- Left column-->
+
+<div class="col-md-9 basic">
+<div class="place_gr_cont">
+<!--place style one-->
+<div class="pg style_one" onclick="location.href='#';">
+<div class="p_cont">
+<h2>Toros Center<span></span></h2>
+<span>Houston Toros is an outdoor turf futsal soccer field. Perfect for field rentals, party rentals, and the best Futsal leagues in town.
+Also be sure to check out our famous $5 Open play on Fridays from 8-10pm!</span>
+</div>
+<img src="http://static.wixstatic.com/media/8fefd5_92aad948ce134da9b336be187ba1e169.jpg_srz_971_693_85_22_0.50_1.20_0.00_jpg_srz" alt="">
+<div class="dar_bg_frid"></div>
+</div>
+<!--place style one-->
+<div class="pg style_one" onclick="location.href='#';">
+<div class="p_cont">
+<h2>Memorial Park<span></span></h2>
+<span>Memorial Park, a municipal park in Houston, Texas, is one of the largest urban parks in the United States.</span>
+</div>
+<img src="http://images.maxpreps.com/site_images/editorial/article/e/c/f/ecf04d75-6a39-4617-8ff5-3eba83532b05/13995255-264a-e211-9349-002655e6c126_original.jpg" alt="">
+<div class="dar_bg_frid"></div>
+</div>
+<!--place style one-->
+<div class="pg style_one" onclick="location.href='#';">
+<div class="p_cont">
+<h2>Burroughs Park<span></span></h2>
+<span>Burroughs Park, provides children and adults of all skill levels the chance to play competitive and fun soccer.</span>
+</div>
+<img src="img/pl1.jpg" alt="">
+<div class="dar_bg_frid"></div>
+</div>
+<!--place style two-->
+<div class="pg style_two" onclick="location.href='#';">
+<h2>Main Street indoor soccer<span></span></h2>
+<span>A Downtown Houston indoor soccer facility offering soccer leagues and training for adults, children, as well as corporate.</span>
+</div>
+<!--place style two-->
+<div class="pg style_two" onclick="location.href='#';">
+<h2>Eagle Creek Sports Complex<span></span></h2>
+<span>Come play on the state-of-the-art in-fill turf field at Houston's only indoor soccer arena inside the Loop. They offer all the amenities you expect from a first-class arena.</span>
+</div>
+<!--place style three-->
+<div class="pg style_three" onclick="location.href='#';">
+<h2>Lyndsay Lyons<span></span></h2>
+<span>Located in Atascocita, Texas 136-acre complex with lighted baseball, soccer, football & soccer fields, playground & picnic areas..</span>
+</div>
+<!--place style one-->
+<div class="pg style_one" onclick="location.href='#';">
+<div class="p_cont">
+<h2>Houston Sports Park<span></span></h2>
+<span>Center of Excellence programs offer advanced training to elite male and female players aged 8-12 and provide high-level supplementary training and the first step into the Houston Dynamo Academy.</span>
+</div>
+<img src="http://baristanet.com/wp-content/uploads/2013/07/1003436_10151715430664260_331096765_n.jpg" alt="">
+<div class="dar_bg_frid"></div>
+</div>
+<!--place style one-->
+<div class="pg style_one" onclick="location.href='#';">
+<div class="p_cont">
+<h2>Bear Creek Park<span></span></h2>
+<span>A Greater Houston, non-profit, youth baseball and softball park dedicated to providing a fun, safe, exciting and nurturing place where children can develop skills.</span>
+</div>
+<img src="img/pl2.jpg" alt="">
+<div class="dar_bg_frid"></div>
+</div>
+
+</div>
+<!--morebtn-->
+<a href="#" class="more_btn">Load more</a>
+</div>
+</div>
+</div>
+</div>
+</div>
