--- a/templates/home.html
+++ b/templates/home.html
@@ -6,10 +6,10 @@
             <h3>Autorization<span></span></h3>
             <form>
                 <label>Login:
-                    <input type="text">
+                    <input class= "login" type="text">
                 </label>
                 <label>Password:
-                    <input type="text">
+                    <input class="login" type="text">
                 </label>
                 <a href="#" class="btn btn-success">Log in</a>
                 <a href="#" class="btn btn-primary"><i class="icon-facebook"></i>Log in with Facebook</a>
@@ -255,16 +255,6 @@
         </div>
     </div>
     <div class="button">
-        <a class="btn green" href="#signup">Sign Up </a>
+        <a class="btn green" href="#details">Work </a>
     </div>
-    <div class="button">
-        <a class="btn green" href="#dashboard">Find a game</a>
-    </div>
-<div id="fb-root">
-    <div
-  class="fb-like"
-  data-share="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
-</div>
+
