--- a/templates/login.html
+++ b/templates/login.html
@@ -63,7 +63,7 @@
             <div class="row">
                 <form geocompleteform class="col-md-12">
                     <a href="index.html" class="logo"><img src="http://pbnjane.com/wp-content/uploads/2015/03/Piqup.png" alt="Piqup" /></a>
-                    <input geocomplete type="text" class="search" placeholder="search"><a href="#" class="green_btn_header" id="ad">Add place</a>
+                    <input geocomplete type="text" class="search" placeholder="search"></a>
                 </form>
             </div>
         </div>
