--- a/templates/home.html
+++ b/templates/home.html
@@ -205,7 +205,7 @@
                         <div class="place_inn">
                             <img src="http://www.riverhounds.com/docs/Ngwenya_Houston.jpg" alt="#">
                             <div class="pl_descr">
-                                <a href="#">Houston Sports Park</a>
+                                <a href="#details">Houston Sports Park</a>
                                 <span>Sports center with 6 grass & turf fields for recreational soccer leagues, camps, practices & events.</span>
                                 <ul class="rate">
                                     <li><i class="fa fa-star"></i></li>
@@ -254,7 +254,5 @@
             </div>
         </div>
     </div>
-    <div class="button">
-        <a class="btn green" href="#details">Work </a>
-    </div>
+
 
