--- a/scss/imports/main.scss
+++ b/scss/imports/main.scss
@@ -1542,6 +1542,7 @@ a.green_btn:hover {
     width: 100%;
     height: 254px;
     margin: 0px;
+    background: url("http://thumbs.dreamstime.com/x/soccer-ball-grass-6261777.jpg")
 }
 
 /*similar*/
