--- a/templates/details.html
+++ b/templates/details.html
@@ -296,7 +296,7 @@
                                         <img src="img/avatar/ava_6.jpg" alt=""></a>
                                 </div>
                                 <div class="texts">
-                                    <div class="head_rev"><a href="02.html">JJ</a> <span>02.28.2015</span></div>
+                                    <div class="head_rev"><a href="#">JJ</a> <span>02.28.2015</span></div>
                                     <div class="text_rev">Uno-dos all day baby! </div>
                                 </div>
                             </div>
@@ -311,7 +311,7 @@
                                         <img src="img/avatar/ava_9.jpg" alt=""></a>
                                 </div>
                                 <div class="texts">
-                                    <div class="head_rev"><a href="02.html">Pedrinho Mendes</a> <span>02.19.2015</span></div>
+                                    <div class="head_rev"><a href="#">Pedrinho Mendes</a> <span>02.19.2015</span></div>
                                     <div class="text_rev">You've been playing like a true Brasilero lately Dorshinho! Don't worry I won;t tell anyone out here that you're Jamaican when you come to Rio haha. </div>
                                 </div>
                             </div>
@@ -326,7 +326,7 @@
                                         <img src="img/avatar/ava_8.jpg" alt=""></a>
                                 </div>
                                 <div class="texts">
-                                    <div class="head_rev"><a href="02.html">Chapa</a> <span>02.03.2015</span></div>
+                                    <div class="head_rev"><a href="#">Chapa</a> <span>02.03.2015</span></div>
                                     <div class="text_rev">Nice assist today bro, good lookin out! </div>
                                 </div>
                             </div>
@@ -341,7 +341,7 @@
                                         <img src="img/avatar/ava_7.jpg" alt=""></a>
                                 </div>
                                 <div class="texts">
-                                    <div class="head_rev"><a href="02.html">Scottie</a> <span>1.09.2015</span></div>
+                                    <div class="head_rev"><a href="#">Scottie</a> <span>1.09.2015</span></div>
                                     <div class="text_rev">Great free kick today, hope I don't have to hear you talking about it for the rest of the month though haha...</div>
                                 </div>
                             </div>
@@ -356,7 +356,7 @@
                                         <img src="http://becauseiplayedsports.com/wp-content/uploads/2010/01/vonn.jpg" alt=""></a>
                                 </div>
                                 <div class="texts">
-                                    <div class="head_rev"><a href="02.html">Paulina Rubio</a> <span>1.17.2015</span></div>
+                                    <div class="head_rev"><a href="#">Paulina Rubio</a> <span>1.17.2015</span></div>
                                     <div class="text_rev">See you next week, great game! </div>
                                 </div>
                             </div>
@@ -371,7 +371,7 @@
                                         <img src="https://38.media.tumblr.com/avatar_6e126ef3241c_128.png" alt=""></a>
                                 </div>
                                 <div class="texts">
-                                    <div class="head_rev"><a href="02.html">Liz Kalhoun</a> <span>12.29.2014</span></div>
+                                    <div class="head_rev"><a href="#">Liz Kalhoun</a> <span>12.29.2014</span></div>
                                     <div class="text_rev">Great playing with you again today, we've still got it! I tell my friends all the time about the game we have going at Eagle Creek, hopefully they make it out soon, take care.</div>
                                 </div>
                             </div>
